@@ -19,8 +19,6 @@
 package org.fenixedu.academic.servlet;
 
 import java.util.Properties;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import javax.mail.Session;
 import javax.mail.Transport;
@@ -31,13 +29,11 @@ import javax.servlet.http.HttpServletRequest;
 
 import org.fenixedu.academic.FenixEduAcademicConfiguration;
 import org.fenixedu.academic.domain.Installation;
-import org.fenixedu.academic.domain.Lesson;
 import org.fenixedu.academic.domain.organizationalStructure.UnitNamePart;
 import org.fenixedu.academic.service.StudentWarningsDefaultCheckers;
 import org.fenixedu.academic.service.StudentWarningsService;
 import org.fenixedu.academic.ui.struts.action.externalServices.PhoneValidationUtils;
 import org.fenixedu.bennu.core.api.SystemResource;
-import org.fenixedu.bennu.core.domain.Bennu;
 import org.fenixedu.bennu.core.rest.Healthcheck;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -58,8 +54,6 @@ public class FenixInitializer implements ServletContextListener {
     @Atomic(mode = TxMode.READ)
     public void contextInitialized(ServletContextEvent event) {
 
-        migrateLessonPtSlots();
-
         Installation.ensureInstallation();
         loadUnitNames();
         startContactValidationServices();
@@ -69,24 +63,6 @@ public class FenixInitializer implements ServletContextListener {
         registerHealthchecks();
         registerDefaultStudentWarningCheckers();
 
-    }
-
-    @Atomic
-    private void migrateLessonPtSlots() {
-        final Set<Lesson> lessons = Bennu.getInstance().getLessonsSet();
-        logger.info("START Lesson migration");
-        logger.info(lessons.size() + " Lesson (total)");
-
-        final AtomicInteger weekdaySlotChangesCounter = new AtomicInteger();
-
-        lessons.forEach(l -> {
-            if (l.migrateDiaSemanaToWeekDay()) {
-                weekdaySlotChangesCounter.incrementAndGet();
-            }
-        });
-
-        logger.info(weekdaySlotChangesCounter.get() + " WeekDay slots updated");
-        logger.info("END Lesson migration");
     }
 
     private void registerDefaultStudentWarningCheckers() {
