@@ -1,5 +1,6 @@
 - Refactor: Cleanup SchoolClass slot names in portuguese 
 - Refactor: Cleanup Shift slot names in portuguese
+- Refactor: Cleanup Lesson slot names in portuguese
 
 30.11.1 (20-10-2020)
 - Fix: Changed Person related entities to allow delete method execution
